# sharedagenda

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Containerfile  Makefile  README.md  builder  cargo-podman  dgfip_ssh.conf  env-home.sh  env.sh  load  load-home  makefile  post  r.txt
.forgejo/workflows/: rust-test.yaml
.github/workflows/: rust-test.yaml
01-platform/: dns.tf  fip_admin.tf  fip_publi.tf  instances.tf  networks.tf  outputs.tf  secgroups.tf  sshkey.tf  tfstate.tf  variables.tf
01-platform/.terraform/: terraform.tfstate
01-platform/static/: rie-ca-bundle.crt  versions.tf
02-configuration/: ansible.cfg  caddy.yaml  create_ssh_config.yaml  grafana.yaml  graphana.yaml  install_and_configure_api.yaml  install_and_configure_caddy.yaml  install_and_configure_postgresql.yaml  keepalived.yaml  pgsql_exporter.yaml  postgresql.yaml  replication.yaml  requirements.yaml  rust.yaml  sharedagenda.playbook.yaml  watchdog.yaml
02-configuration/files/: 60-watchdog.rules  api_watchdog.service  secret-key.key  self-signed.pem  ssl-cert.crt  ssl-cert.key  tables.sql
02-configuration/group_vars/: all.yaml
02-configuration/inventory/: 02-openstack.yaml  03-platform.yaml
04-vps/: api.yaml  caddy.yaml  home.playbook.yaml  postgresql.yaml  prometheus.yaml  requirements.yaml
04-vps/files/: Caddyfile  (+4 more)
assets/: infrastructure_v3.drawio
crates/cli/: Cargo.toml  Makefile  README.md
crates/cli/src/: call.rs  main.rs
crates/cli/src/configuration/: loader.rs
crates/cli/src/handlers/: api.rs  change.rs  create.rs  delete.rs  event_deletion.rs  list.rs  login.rs  logout.rs  mod.rs  modify.rs  register.rs  user_list.rs  whoami.rs
crates/cli/src/handlers/event/: change.rs  create.rs  delete.rs  list.rs  mod.rs
crates/cli/src/handlers/user/: delete.rs  login.rs  logout.rs  mod.rs  modify.rs  register.rs  user_list.rs  whoami.rs
crates/server/: Cargo.toml  Containerfile  README.md  codes.md  endpoints.md  root@10.0.2.4
crates/server/src/: configuration.rs  database.rs  main.rs  structs.rs
crates/server/src/events/: create.rs  delete.rs  list.rs  mod.rs  modify.rs  structs.rs
crates/server/src/users/: create.rs  creation.rs  delete.rs  list.rs  login.rs  logout.rs  mod.rs  modify.rs  structs.rs  whoami.rs
crates/tui/: Cargo.toml  Makefile
crates/tui/src/: app.rs  call.rs  main.rs  ui.rs
crates/tui/src/widgets/: api.rs  delete.rs  login.rs  main.rs  mod.rs  modify.rs  navigation_bar.rs  register.rs  template.rs  top.rs
presentation/: README.md  main.typ  makefile  storyboard.md  template.typ
(+189 files in other folders)
