[package]
name = "cli"
version = "2.0.0-prod"
edition = "2024"

[dependencies]
ansi_term = "0.12.1"
linefeed = "0.6"
confy = "0.6.1"
lazy_static = "1.5.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
chrono = { version="0.4.40", features = ["serde"] }
