[package]
name = "server"
version = "3.0.0-dev"
edition = "2024"

[dependencies]
confy = "0.6.1"
chrono = { version="0.4.40", features = ["serde"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
uuid = { version = "1.16.0", features = ["v4"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
password-hash = { version = "0.5.0", features = ["getrandom"] }
argon2 = { version = "0.5.3", features = ["alloc","password-hash"] }

