[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tui-textarea = "0.7.0"
lazy_static = "1.5.0"
password-hash = { version = "0.5.0", features = ["getrandom"] }
argon2 = { version = "0.5.3", features = ["alloc","password-hash"] }
tokio = { version = "1", features = ["full"] }
chrono = { version="0.4.40", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
common = { workspace = true }
